<resources>
    <string name="app_name">SALUD APP</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="hint_ingrese_su_usuario">INGRESE SU USUARIO</string>
    <string name="hint_ingrese_su_password">INGRESE SU CONTRASEÑA</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_guardar">AGENDAR</string>
    <string name="hint_fecha_cita">INGRESE LA FECHA</string>
    <string name="hint_hora_cita">INGRESE LA HORA</string>
    <string name="hint_tipo_actividad">INGRESE LA ACTIVIDAD</string>
    <string name="hint_detalle">INGRESE EL DETALLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subir_cita">AGENDAR</string>
    <string name="resportes">INFORME</string>
    <string name="salir_Sessiom">CERRAR SESION</string>
    <string name="vacio" />
    <string name="cannotopencamera">OPEN CAMERA</string>
    <string name="segimiento_cita">SEGUIMIENTO</string>
    <string name="segimiento_new_user">NUEVO USUARIO</string>
    <string name="segimiento_rud_user">EDITAR USUARIOS</string>
    <string name="url_login_user">http://www.vigitrackecuador.com/services_unach/crud_usuarios/login.php</string>
    <string name="url_update_user">http://www.vigitrackecuador.com/services_unach/crud_usuarios/update.php</string>
    <string name="url_insert_cita">http://www.vigitrackecuador.com/services_unach/crud_citas/create.php</string>
    <string name="btn_guardar_user">GUARDAR</string>
    <string name="url_select_roles">http://www.vigitrackecuador.com/services_unach/rol/read.php</string>
    <string name="btn_buscar_reportes">PUBLICACION ACTIVIDAD</string>
    <string name="url_read_citas">http://www.vigitrackecuador.com/services_unach/crud_citas/read.php</string>
    <string name="btn_asistido">ASISTIDO</string>
    <string name="btn_falta">FALTA</string>
    <string name="url_create_user">http://www.vigitrackecuador.com/services_unach/crud_usuarios/create.php</string>

    <string name="url_update_estado_citas">http://www.vigitrackecuador.com/services_unach/crud_seguimiento/update.php</string>
    <string name="url_read_seguimiento">http://www.vigitrackecuador.com/services_unach/crud_seguimiento/read.php</string>
    <string name="url_update_estado_seguimiento">http://www.vigitrackecuador.com/services_unach/crud_seguimiento/update.php</string>
    <string name="url_insert_seguimiento">http://www.vigitrackecuador.com/services_unach/crud_seguimiento/create.php</string>
    <string name="text_registrar_agendador_login">Desea registrarse, aqui</string>
    <string name="hint_fecha_">  yyyy-mm-dd</string>
    <string name="hint_hora_">HH:mm</string>
    <string name="hint_tipo_especialidad">INGRESE LA ESPECIALIDAD</string>
    <string name="hint_especialista">INGRESE EL ESPECIALISTA</string>
    <string name="subir_cita_publicar">PUBLICAR</string>
    <string name="generar_lista">GENERAR LISTA</string>
    <string name="url_read_reportG">http://www.vigitrackecuador.com/services_unach/reportG/report.php</string>
    <string name="hint_cedula">INGRESE EL NUMERO DE CEDULA</string>
    <string name="hint_datos">INGRESE SUS NOMBRES</string>
    <string name="hint_telefono">INGRESE SU TELEFONO</string>
    <string name="mis_citas">MI AGENDA</string>

    <string name="url_mis_citas">http://www.vigitrackecuador.com/services_unach/crud_mis_citas/read.php</string>

</resources>