<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/actividad_agendar_cita"
        android:id="@+id/id_seguimiento_master"
        android:title="@string/segimiento_cita"
        >
    </item>
    <item
        android:icon="@drawable/add_cita_agendar"
        android:id="@+id/id_subir_master"
        android:title="@string/subir_cita_publicar"
        >
    </item>
    <item
        android:icon="@drawable/reporte_agendar"
        android:id="@+id/id_reporte_master"
        android:title="@string/resportes"
        >
    </item>
    <item
        android:icon="@drawable/icono_user_login_p"
        android:id="@+id/id_new_user_master"
        android:title="@string/segimiento_new_user"
        >
    </item>
    <item
        android:icon="@drawable/cerras_sess"
        android:id="@+id/id_salir_"
        android:title="@string/salir_Sessiom"
        >
    </item>
</menu>