<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbars="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:background="@drawable/border_cuadrado"
                    android:gravity="center_vertical"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/fecha_agendar_cita"
                    android:id="@+id/_id_fecha_cita"
                    android:hint="@string/hint_fecha_"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    >
                </TextView>
                <TextView
                    android:layout_weight="0.5"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/border_cuadrado"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/hora_agendar_cita"
                    android:id="@+id/_id_hora_cita"
                    android:hint="@string/hint_hora_"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    >
                </TextView>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/departament_"
                app:startIconTint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_id_especialidad_cita"
                    android:hint="@string/hint_tipo_especialidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/doctor_"
                app:startIconTint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_id_especialista_cita"
                    android:hint="@string/hint_especialista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/actividad_agendar_cita"
                app:startIconTint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_id_actividad_cita"
                    android:hint="@string/hint_tipo_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/detalle_agendar_cita"
                app:startIconTint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_id_detalle_cita"
                    android:hint="@string/hint_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/_id_btn_cancelar_cita"
                    android:textSize="@dimen/textsize_boton_agendar_cancelar"
                    android:textStyle="bold"
                    android:text="@string/btn_cancelar"
                    android:layout_weight="0.5"
                    android:theme="@style/RaisedButtonRedDark"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize">
                </androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/_id_btn_agendar_cita"
                    android:textSize="@dimen/textsize_boton_agendar_cancelar"
                    android:textStyle="bold"
                    android:text="@string/btn_guardar"
                    android:layout_weight="0.5"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize">
                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>