<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Views.CreateUserLoginActivity">
    <include layout="@layout/view_toolbar">
    </include>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/card_datos_login">
        </include>
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/passport"
            app:startIconTint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/id_edittext_cedula"
                android:layout_width="match_parent"
                android:hint="@string/hint_cedula"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/edit_user"
            app:startIconTint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_name"
                android:layout_width="match_parent"
                android:hint="@string/hint_datos"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/call_"
            app:startIconTint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_telefono"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/hint_telefono"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id_btn_cancelar_registro_new_user"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_boton_login"
                android:layout_weight="0.5"
                android:text="@string/btn_cancelar"
                android:theme="@style/RaisedButtonRedDark"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id_btn_guardar_registro_new_user"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_boton_login"
                android:layout_weight="0.5"
                android:text="@string/btn_guardar_user"
                android:theme="@style/RaisedButtonDark"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>